--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "common",
+  "name": "stox-bc-request-manager-common",
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
