--- a/common/package.json
+++ b/common/package.json
@@ -1,21 +1,11 @@
 {
   "name": "stox-bc-request-manager-common",
-  "version": "0.0.1",
-  "description": "",
+  "version": "1.0.0",
   "main": "src/index.js",
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
-    "app-module-path": "^2.2.0",
-    "axios": "^0.17.1",
-    "commander": "^2.12.1",
-    "cross-env": "^5.1.3",
-    "lodash": "^4.17.4",
-    "moment": "^2.19.1",
-    "node-schedule": "^1.3.0",
-    "pino": "^4.8.0",
-    "sequelize": "^4.33.4",
-    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#3799c369414606e3de463de7d50a107891390951"
+    "lodash": "^4.17.5",
+    "sequelize": "^4.35.2",
+    "uuid4": "^1.0.0"
   }
 }
