--- a/transactions-writer/.env.example
+++ b/transactions-writer/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL = 'postgres://postgres:secret@localhost:5433/stoxbcwallet'
+DATABASE_URL = 'postgres://postgres:secret@localhost:5434/stoxbcrm'
 NETWORK = 'MAIN'
 MQ_CONNECTION_URL = 'localhost:61613'
