--- a/transactions-writer/package.json
+++ b/transactions-writer/package.json
@@ -26,7 +26,7 @@
     "pg": "^7.4.1",
     "pino": "^4.8.0",
     "sequelize": "^4.33.4",
-    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#service_returns_context"
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
