--- a/request-handler/package.json
+++ b/request-handler/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon -e js . | pino",
     "serve": "node .",
+    "lint": "eslint .",
     "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
     "jest:integration": "jest"
   },
@@ -14,14 +15,6 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
-    "axios": "^0.17.1",
-    "commander": "^2.12.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.19.1",
-    "node-schedule": "^1.3.0",
-    "pg": "^7.4.1",
-    "pino": "^4.8.0",
-    "sequelize": "^4.33.4",
     "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
   },
   "devDependencies": {
