--- a/transactions-writer/package.json
+++ b/transactions-writer/package.json
@@ -2,30 +2,19 @@
   "name": "stox-bc-transactions-writer",
   "version": "1.0.0",
   "description": "",
-  "private": true,
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon -e js . | pino",
     "serve": "node .",
+    "lint": "eslint .",
     "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
     "jest:integration": "jest"
   },
-  "workspaces": [
-    "common"
-  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
-    "axios": "^0.17.1",
-    "commander": "^2.12.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.19.1",
-    "node-schedule": "^1.3.0",
-    "pg": "^7.4.1",
-    "pino": "^4.8.0",
-    "sequelize": "^4.33.4",
     "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
   },
   "devDependencies": {
