--- a/common/package.json
+++ b/common/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "lodash": "^4.17.5",
+    "require-all": "^2.2.0",
     "sequelize": "^4.35.2",
     "uuid4": "^1.0.0"
   },
