--- a/request-reader/package.json
+++ b/request-reader/package.json
@@ -17,7 +17,7 @@
     "app-module-path": "^2.2.0",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "file:../common",
-    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#blockchain-service"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
