--- a/request-handler/package.json
+++ b/request-handler/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stox-bc-request-handler",
+  "name": "request-handler",
   "version": "1.0.0",
-  "description": "",
+  "description": "Reads pending requests from database, uses prepareTransactions function from plugin",
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon -e js . | pino",
