--- a/transactions-writer/.env.example
+++ b/transactions-writer/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL = 'postgres://postgres:secret@localhost:5434/stoxbcrm'
-WRITE_PENDING_TRANSACTIONS_CRON = '*/5 * * * * *'
+DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
+WRITE_PENDING_TRANSACTIONS_CRON='*/5 * * * * *'
