createWallet - prepareTransactions create a api call to wallet-api

--- a/request-handler/.env.example
+++ b/request-handler/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL='postgres://postgres:secret@localhost:5435/stoxbcrm'
+WALLETS_API_BASE_URL = 'http://localhost:3001/api/v1/'
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 HANDLE_UNSENT_REQUEST_CRON='*/5 * * * * *'
