--- a/request-handler/.env.example
+++ b/request-handler/.env.example
@@ -3,3 +3,4 @@ WALLETS_API_BASE_URL = 'http://localhost:3001/api/v1/'
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 HANDLE_UNSENT_REQUEST_CRON='*/5 * * * * *'
+WALLET_OPERATOR_ACCOUNT_ADDRESS=''
