limit pending request

--- a/request-handler/.env.example
+++ b/request-handler/.env.example
@@ -4,3 +4,4 @@ NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 HANDLE_UNSENT_REQUEST_CRON='*/5 * * * * *'
 WALLET_OPERATOR_ACCOUNT_ADDRESS=''
+LIMIT_PENDING_REQUEST=10
