--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "stox-bc-request-manager",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev": "concurrently --kill-others \"npm start --prefix request-reader\" \"npm start --prefix request-handler\" \"npm start --prefix request-manager-api\" \"npm start --prefix transactions-monitor\" \"npm start --prefix transactions-writer\" "
   },
   "repository": {
     "type": "git",
@@ -11,5 +13,16 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/stx_site/stox-bc-request-manager#readme"
+  "homepage": "https://bitbucket.org/stx_site/stox-bc-request-manager#readme",
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "jest": "^22.1.1",
+    "nodemon": "^1.12.1",
+    "prettier": "^1.7.4",
+    "prettier-eslint": "^8.2.1",
+    "prettier-eslint-cli": "^4.4.0"
+  }
 }
