--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "prettier": "^1.7.4",
     "prettier-eslint": "^8.2.1",
     "prettier-eslint-cli": "^4.4.0"
+  },
+  "dependencies": {
+    "shelljs": "^0.8.1"
   }
 }
