--- a/transactions-monitor/.env.example
+++ b/transactions-monitor/.env.example
@@ -1,3 +1,4 @@
-DATABASE_URL='postgres://postgres:secret@localhost:5435/stoxbcrm'
+DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
+MONITOR_TRANSACTIONS_CRON='5 * * * * *'
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
