--- a/transactions-signer/package.json
+++ b/transactions-signer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "request-manager-api",
+  "name": "transactions-signer",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
