refactor to new stox common

--- a/common/package.json
+++ b/common/package.json
@@ -12,7 +12,8 @@
     "lodash": "^4.17.5",
     "require-all": "^2.2.0",
     "sequelize": "^4.35.2",
-    "uuid4": "^1.0.0"
+    "uuid4": "^1.0.0",
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
