--- a/transactions-monitor/.env.example
+++ b/transactions-monitor/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
 MONITOR_TRANSACTIONS_CRON='5 * * * * *'
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
+REQUIRED_CONFIRMATIONS = 0
