--- a/request-handler/package.json
+++ b/request-handler/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
+    "one-liner": "^1.3.0",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "file:../common",
     "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
