--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,19 +3,40 @@ services:
 
     request-reader:
         build:
-            context: .
+            context: ../
             args:
-              DIR: ../request-reader
-            dockerfile: service.Dockerfile
+              DIR: request-reader
+            dockerfile: deploy/service.Dockerfile
         container_name: request-reader
         depends_on:
-            - db
             - activemq
+            - db
         environment:
-            PORT: 3003
             DATABASE_URL: postgres://postgres:secret@db/stoxbcrm
-            NETWORK: MAIN
             MQ_CONNECTION_URL: stomp://activemq:61613
+            PORT: 3003
+            NETWORK: MAIN
+        image: request-reader
+        networks:
+            - subsystems
+        tty: true
+        restart: always
+
+    request-handler:
+        build:
+            context: ../
+            args:
+              DIR: request-handler
+            dockerfile: deploy/service.Dockerfile
+        container_name: request-handler
+        depends_on:
+            - activemq
+            - db
+        environment:
+            DATABASE_URL: postgres://postgres:secret@db/stoxbcrm
+            MQ_CONNECTION_URL: stomp://activemq:61613
+            PORT: 3003
+            NETWORK: MAIN
         image: request-reader
         networks:
             - subsystems
@@ -23,13 +44,16 @@ services:
         restart: always
 
     db:
-        image: stox-regitry/stoxdb:10.3
+        build:
+            context: ../
+            dockerfile: deploy/db.Dockerfile
         container_name: db
         networks:
             - subsystems
         ports:
-            - 5434:5432
+            - 5432:5432
         environment:
+            DB_PORT: 5432
             POSTGRES_PASSWORD: secret
             POSTGRES_USER: postgres
             POSTGRES_DB: stoxbcrm
