--- a/request-reader/package.json
+++ b/request-reader/package.json
@@ -16,8 +16,7 @@
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
     "require-all": "^2.2.0",
-    "stox-bc-request-manager-common": "file:../common",
-    "stox-common": "git@bitbucket.org:stx_site/stox-common.git#dev"
+    "stox-bc-request-manager-common": "file:../common"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
