--- a/common/package.json
+++ b/common/package.json
@@ -13,7 +13,8 @@
     "require-all": "^2.2.0",
     "sequelize": "^4.35.2",
     "uuid4": "^1.0.0",
-    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
+    "web3": "^1.0.0-beta.33"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
