--- a/transactions-writer/.env.example
+++ b/transactions-writer/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
 WRITE_PENDING_TRANSACTIONS_CRON='5 * * * * *'
-NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
+WEB_3_URL = 'localhost:8545/'
+TRANSACTIONS_SIGNER_BASE_URL = 'localhost:8090/api/v1'
