--- a/transactions-writer/package.json
+++ b/transactions-writer/package.json
@@ -17,7 +17,8 @@
     "app-module-path": "^2.2.0",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "file:../common",
-    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
+    "web3": "^1.0.0-beta.33"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
