limit requests/transactions handling

--- a/transactions-monitor/.env.example
+++ b/transactions-monitor/.env.example
@@ -3,3 +3,4 @@ MONITOR_TRANSACTIONS_CRON='5 * * * * *'
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 REQUIRED_CONFIRMATIONS=0
+LIMIT_TRANSACTIONS=10
