--- a/transactions-writer/.env.example
+++ b/transactions-writer/.env.example
@@ -1,5 +1,8 @@
 DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
+WEB_3_URL='http://internal-prod-parity-elb-int-971313575.eu-west-1.elb.amazonaws.com:8545/'
 WRITE_PENDING_TRANSACTIONS_CRON='5 * * * * *'
 MQ_CONNECTION_URL='localhost:61613'
 WEB_3_URL = 'localhost:8545/'
 TRANSACTIONS_SIGNER_BASE_URL = 'localhost:8090/api/v1'
+LIMIT_TRANSACTIONS=10
+
