--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -15,16 +15,11 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
+    "promise-serial": "^0.1.5",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
-    "stox-common": "git@bitbucket.org:stx_site/stox-common.git#dev",
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
     "uuid4": "^1.0.0"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "modulePaths": [
-      "<rootDir>/src/"
-    ]
   },
   "devDependencies": {
     "eslint": "^4.9.0",
