--- a/packages/request-reader/package.json
+++ b/packages/request-reader/package.json
@@ -16,7 +16,8 @@
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
     "require-all": "^2.2.0",
-    "stox-bc-request-manager-common": "1.0.0"
+    "stox-bc-request-manager-common": "1.0.0",
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
