--- a/packages/transactions-monitor/.env.example
+++ b/packages/transactions-monitor/.env.example
@@ -1,5 +1,6 @@
 DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
-MONITOR_TRANSACTIONS_CRON='*/10 * * * * *'
+MONITOR_TRANSACTIONS_CRON='5 * * * * *'
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 REQUIRED_CONFIRMATIONS=0
+LIMIT_TRANSACTIONS=10
