--- a/packages/transactions-writer/package.json
+++ b/packages/transactions-writer/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
+    "promise-serial": "^0.1.5",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
-    "stox-common": "git@bitbucket.org:stx_site/stox-common.git#dev",
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
     "web3": "^1.0.0-beta.33"
   },
   "devDependencies": {
