handle completed transaction

--- a/packages/transactions-monitor/package.json
+++ b/packages/transactions-monitor/package.json
@@ -16,6 +16,7 @@
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
     "lodash": "^4.17.5",
+    "promise-serial": "^0.1.5",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
     "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
