--- a/package.json
+++ b/package.json
@@ -1,17 +1,7 @@
 {
-  "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "lerna": "^2.9.1",
-    "prettier": "^1.7.4",
-    "prettier-eslint": "^8.2.1",
-    "prettier-eslint-cli": "^4.4.0",
-    "promise-serial": "^0.1.5"
-  },
   "scripts": {
     "lint": "eslint . --ignore-path .gitignore --cache",
     "setup": "lerna bootstrap --hoist",
-    "setup:clean": "lerna exec -- rm -rf package-lock.json node_modules && npm run setup"
+    "setup:clean": "lerna clean --yes && npm run setup"
   }
 }
