--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -17,12 +17,12 @@
     "web3": "^1.0.0-beta.33"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "pino": "^4.15.3",
+    "eslint-plugin-import": "^2.9.0",
     "prettier": "^1.7.4",
     "prettier-eslint": "^8.2.1",
-    "prettier-eslint-cli": "^4.4.0"
+    "prettier-eslint-cli": "^4.4.0",
+    "pino": "^4.15.3"
   }
 }
