--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -15,22 +15,21 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
-    "promise-serial": "^0.1.5",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
     "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
+    "promise-serial": "^0.1.5",
+    "require-all": "^2.2.0",
     "uuid4": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "jest": "^22.4.3",
-    "jest-cli": "^22.4.3",
-    "nodemon": "^1.12.1",
-    "pino": "^4.15.3",
+    "eslint-plugin-import": "^2.9.0",
     "prettier": "^1.7.4",
     "prettier-eslint": "^8.2.1",
-    "prettier-eslint-cli": "^4.4.0"
+    "prettier-eslint-cli": "^4.4.0",
+    "nodemon": "^1.12.1",
+    "pino": "^4.15.3"
   }
 }
