--- a/packages/request-manager-api/package.json
+++ b/packages/request-manager-api/package.json
@@ -20,14 +20,13 @@
     "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "jest": "^22.1.1",
-    "nodemon": "^1.12.1",
-    "pino": "^4.15.3",
+    "eslint-plugin-import": "^2.9.0",
     "prettier": "^1.7.4",
     "prettier-eslint": "^8.2.1",
-    "prettier-eslint-cli": "^4.4.0"
+    "prettier-eslint-cli": "^4.4.0",
+    "nodemon": "^1.12.1",
+    "pino": "^4.15.3"
   }
 }
