--- a/packages/transactions-signer/package.json
+++ b/packages/transactions-signer/package.json
@@ -15,21 +15,20 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
-    "ethereumjs-tx": "^1.3.4",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
     "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
-    "web3": "^1.0.0-beta.30"
+    "web3": "^1.0.0-beta.33",
+    "ethereumjs-tx": "^1.3.4"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "jest": "^22.1.1",
-    "nodemon": "^1.12.1",
-    "pino": "^4.15.3",
+    "eslint-plugin-import": "^2.9.0",
     "prettier": "^1.7.4",
     "prettier-eslint": "^8.2.1",
-    "prettier-eslint-cli": "^4.4.0"
+    "prettier-eslint-cli": "^4.4.0",
+    "nodemon": "^1.12.1",
+    "pino": "^4.15.3"
   }
 }
