--- a/packages/request-manager-api/package.json
+++ b/packages/request-manager-api/package.json
@@ -17,7 +17,8 @@
     "app-module-path": "^2.2.0",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
-    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev"
+    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
+    "moment": "^2.19.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
