--- a/packages/transactions-monitor/.env.example
+++ b/packages/transactions-monitor/.env.example
@@ -4,3 +4,4 @@ NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 REQUIRED_CONFIRMATIONS=0
 LIMIT_TRANSACTIONS=10
+WEB_3_URL = 'http://localhost:8545/'
