--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -8,28 +8,39 @@
     "serve": "node .",
     "lint": "eslint -c ../../.eslintrc.yml .",
     "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
-    "jest:integration": "jest"
+    "test": "jest --config ./jest.json ../integration_tests",
+    "test:pact": "jest src/tests/__tests__/ --verbose --testEnvironment node --runInBand",
+    "docker:build": "docker-compose -f file build --build-arg SSH_PRIVATE_KEY=\"$(cat ./id_rsa)\" request-handler",
+    "docker:up": "docker-compose up -d",
+    "docker:stop": "docker-compose stop",
+    "docker:restart": "docker-compose restart",
+    "docker:logs": "docker logs request-handler"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pact-foundation/pact": "^5.9.0",
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
-    "require-all": "^2.2.0",
-    "stox-bc-request-manager-common": "1.0.0",
-    "stox-common": "git+https://bitbucket.org/stx_site/stox-common.git#dev",
     "promise-serial": "^0.1.5",
     "require-all": "^2.2.0",
+    "stox-bc-request-manager-common": "1.0.0",
+    "stox-common": "git@bitbucket.org:stx_site/stox-common.git#dev",
+    "urijs": "^1.19.1",
     "uuid4": "^1.0.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-jest-diff": "^1.0.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
+    "jest": "^22.4.3",
+    "jest-cli": "^22.4.3",
+    "nodemon": "^1.12.1",
+    "pino": "^4.15.3",
     "prettier": "^1.7.4",
     "prettier-eslint": "^8.2.1",
-    "prettier-eslint-cli": "^4.4.0",
-    "nodemon": "^1.12.1",
-    "pino": "^4.15.3"
+    "prettier-eslint-cli": "^4.4.0"
   }
 }
