can run container test and run all regular container together and added a posibility to add parameter to run test for specific service

--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -5,24 +5,24 @@ services:
         image: request-manager
         container_name: ${SERVICE_NAME}-test
         depends_on:
-            - activemq
-            - request-manager-db
+            - activemq-test
+            - request-manager-db-test
         env_file:
             - ../packages/${SERVICE_NAME}/.env.test
         environment:
-            DATABASE_URL: postgres://postgres:secret@request-manager-db/stoxbcrm
-            MQ_CONNECTION_URL: stomp://activemq:61613
+            DATABASE_URL: postgres://postgres:secret@request-manager-db-test/stoxbcrm
+            MQ_CONNECTION_URL: stomp://activemq-test:61613
             SERVICE_NAME: $SERVICE_NAME
         networks:
             - subsystems
         tty: true
         entrypoint: npm run test --prefix packages/${SERVICE_NAME}
 
-    request-manager-db:
+    request-manager-db-test:
         build:
             context: ../
             dockerfile: ./docker/db.Dockerfile
-        container_name: stox-postgres-bc-rm
+        container_name: stox-postgres-bc-rm-test
         networks:
             - subsystems
         environment:
@@ -30,9 +30,9 @@ services:
             POSTGRES_USER: postgres
             POSTGRES_DB: stoxbcrm
 
-    activemq:
+    activemq-test:
         image: rmohr/activemq:5.14.5
-        container_name: stox-activemq
+        container_name: stox-activemq-test
         networks:
             - subsystems
 
