--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name"	 : "request-manager",
+  "config" : { "service" : "request-handler" },
   "scripts": {
     "lint": "eslint . --ignore-path .gitignore --cache",
     "link": "common.sh link",
@@ -6,7 +8,7 @@
     "setup:clean": "lerna clean --yes && npm run setup",
     "containers:up": "docker-compose -f docker/docker-compose.yml up -d",
     "containers:build": "export SSH_PRIVATE_KEY=\"$(cat ./id_rsa)\" && docker-compose -f docker/docker-compose.yml build",
-    "test": "cross-env SERVICE_NAME=request-handler docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
-    "test:clean": "cross-env SERVICE_NAME=request-handler docker-compose -f docker/docker-compose.test.yml down"
+    "test": "cross-env SERVICE_NAME=$npm_package_config_service docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
+    "test:clean": "cross-env SERVICE_NAME=$npm_package_config_service docker-compose -f docker/docker-compose.test.yml down"
   }
 }
