--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name"	 : "request-manager",
-  "config" : { "service" : "request-handler" },
+  "config" : { "service" : "request-manager" },
   "scripts": {
     "lint": "eslint . --ignore-path .gitignore --cache",
     "link": "common.sh link",
     "setup": "lerna bootstrap --hoist",
     "setup:clean": "lerna clean --yes && npm run setup",
-    "containers:up": "docker-compose -f docker/docker-compose.yml up -d",
-    "containers:build": "export SSH_PRIVATE_KEY=\"$(cat ./id_rsa)\" && docker-compose -f docker/docker-compose.yml build",
+    "containers": "docker-compose -f docker/docker-compose.yml up -d",
     "test": "cross-env SERVICE_NAME=$npm_package_config_service docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
     "test:clean": "cross-env SERVICE_NAME=$npm_package_config_service docker-compose -f docker/docker-compose.test.yml down"
   }
