--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name"	 : "request-manager",
-  "config" : { "service" : "request-manager" },
+  "config" : { "service" : "request-handler" },
   "scripts": {
     "lint": "eslint . --ignore-path .gitignore --cache",
     "link": "common.sh link",
     "setup": "lerna bootstrap --hoist",
     "setup:clean": "lerna clean --yes && npm run setup",
     "containers": "docker-compose -f docker/docker-compose.yml up -d",
-    "test": "cross-env SERVICE_NAME=$npm_package_config_service docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
-    "test:clean": "cross-env SERVICE_NAME=$npm_package_config_service docker-compose -f docker/docker-compose.test.yml down"
+    "test": "lerna exec -- npm test",
+    "test:compose": "docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
+    "test:clean": "docker-compose -f docker/docker-compose.test.yml down"
   }
 }
