--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -8,7 +8,8 @@
     "chai-jest-diff": "^1.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\"",
+    "test:integration": "echo \"Error: no test specified\""
   },
   "author": "",
   "license": "ISC"
