--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -8,7 +8,8 @@
     "serve": "node .",
     "lint": "eslint -c ../../.eslintrc.yml .",
     "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
-    "test": "jest src/tests/__tests__/* --verbose --testEnvironment node --runInBand"
+    "test": "jest src/tests/__tests__/* --verbose --testEnvironment node --runInBand",
+    "test:integration": "jest src/tests/__integration__/* --verbose --testEnvironment node --runInBand"
   },
   "author": "",
   "license": "ISC",
