--- a/packages/transactions-writer/package.json
+++ b/packages/transactions-writer/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon -e js . | pino",
     "serve": "node .",
     "lint": "eslint -c ../../.eslintrc.yml .",
-    "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src"
+    "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
+    "test:integration": "echo \"Error: no test specified\""
   },
   "author": "",
   "license": "ISC",
