--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "test:integration": "echo \"Error: no test specified\""
+    "test:integration": "echo \"no tests\""
   },
   "author": "",
   "license": "ISC"
