--- a/packages/request-reader/package.json
+++ b/packages/request-reader/package.json
@@ -8,7 +8,7 @@
     "serve": "node .",
     "lint": "eslint -c ../../.eslintrc.yml .",
     "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
-    "test:integration": "echo \"Error: no test specified\""
+    "test:integration": "echo \"no tests\""
   },
   "author": "",
   "license": "ISC",
