--- a/packages/transactions-writer/package.json
+++ b/packages/transactions-writer/package.json
@@ -17,8 +17,7 @@
     "promise-serial": "^0.1.5",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
-    "stox-common": "git@bitbucket.org:stx_site/stox-common.git#dev",
-    "web3": "^1.0.0-beta.33"
+    "stox-common": "git@bitbucket.org:stx_site/stox-common.git#dev"
   },
   "devDependencies": {
     "@pact-foundation/pact": "^5.9.0",
