--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "setup": "lerna bootstrap --hoist",
     "setup:clean": "lerna clean --yes && npm run setup",
     "containers": "docker-compose -f docker/docker-compose.yml up -d",
-    "test": "lerna exec -- npm test",
+    "test": "lerna run test",
     "test:compose": "docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
     "test:clean": "docker-compose -f docker/docker-compose.test.yml down"
   }
