--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -3,37 +3,29 @@ services:
 
     sut:
         image: request-manager
-        container_name: services-test
+        container_name: sut
         depends_on:
-            - activemq-test
-            - request-manager-db-test
+            - sut-db
         env_file:
             - ../docker/.env.test
         environment:
-            DATABASE_URL: postgres://postgres:secret@request-manager-db-test/stoxbcrm
-            MQ_CONNECTION_URL: stomp://activemq-test:61613
+            DATABASE_URL: postgres://postgres:secret@sut-db/stoxbcrm
         networks:
             - subsystems
         tty: true
-        entrypoint: lerna exec -- npm run test:integration
+        entrypoint: lerna run test:integration
 
-    request-manager-db-test:
+    sut-db:
         build:
             context: ../
             dockerfile: ./docker/db.Dockerfile
-        container_name: stox-postgres-bc-rm-test
+        container_name: sut-db
         networks:
             - subsystems
         environment:
             POSTGRES_PASSWORD: secret
             POSTGRES_USER: postgres
             POSTGRES_DB: stoxbcrm
-
-    activemq-test:
-        image: rmohr/activemq:5.14.5
-        container_name: stox-activemq-test
-        networks:
-            - subsystems
 
 networks:
     subsystems:
