--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,19 +4,20 @@ options:
   docker: true
 
 pipelines:
-  default:
-    - step:
-        caches:
-          - node
-        script:
-           - npm i
-           - npm run lint
-           - apt-get update
-           - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
-           - unzip awscli-bundle.zip -d /tmp/
-           - /tmp/awscli-bundle/install -b ~/bin/aws
-           - export PATH=~/bin:$PATH
-           - export IMAGE_NAME=$DOCKER_REGISTRY_DEV:$BITBUCKET_BUILD_NUMBER
-           - docker build -t $IMAGE_NAME --build-arg SSH_PRIVATE_KEY="$(cat /opt/atlassian/pipelines/agent/data/id_rsa)"  .
-           - eval $(aws ecr get-login --no-include-email --region ${AWS_DEFAULT_REGION})
-           - docker push $IMAGE_NAME
+  branches:
+    dev:
+      - step:
+          caches:
+            - node
+          script:
+             - npm i
+             - npm run lint
+             - apt-get update
+             - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+             - unzip awscli-bundle.zip -d /tmp/
+             - /tmp/awscli-bundle/install -b ~/bin/aws
+             - export PATH=~/bin:$PATH
+             - export IMAGE_NAME=$DOCKER_REGISTRY_DEV:$BITBUCKET_BUILD_NUMBER
+             - docker build -t $IMAGE_NAME --build-arg SSH_PRIVATE_KEY="$(cat /opt/atlassian/pipelines/agent/data/id_rsa)"  .
+             - eval $(aws ecr get-login --no-include-email --region ${AWS_DEFAULT_REGION})
+             - docker push $IMAGE_NAME
