--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -8,8 +8,8 @@
     "serve": "node .",
     "lint": "eslint -c ../../.eslintrc.yml .",
     "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
-    "test": "jest src/tests/__tests__/* --verbose --testEnvironment node --runInBand",
-    "test:integration": "jest src/tests/__integration__/* --config=./jest.json --runInBand"
+    "test": "jest src/tests/__tests__/* --rootDir=. --config=../jest/jest.json -i",
+    "test:integration": "jest src/tests/__integration__/* --rootDir=. --config=../jest/jest.json -i"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-jest-diff": "^1.0.2",
+    "chai-shallow-deep-equal": "^1.4.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
