change pipeline branch + setup:clean by default + update README.md

--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
 
     sut:
-        image: request-manager
+        image: $IMAGE_NAME
         container_name: sut
         depends_on:
             - sut-db
