--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,25 +1,33 @@
-image: atlassian/default-image:2
+image: docker:stable
 
 options:
   docker: true
 
 pipelines:
   branches:
-    dev:
+    test_container:
       - step:
           caches:
             - node
           script:
-            - npm install lerna rimraf cross-env -g
-            - npm run setup
-            - npm run lint
-            - npm run test
+#            - npm install eslint -g
+#            - npm run lint
+
+#            - export IMAGE_NAME=$DOCKER_REGISTRY_DEV:$BITBUCKET_BUILD_NUMBER
+            - export IMAGE_NAME=test
+            - docker build -f ./docker/Dockerfile -t $IMAGE_NAME --build-arg SSH_PRIVATE_KEY="$(cat /opt/atlassian/pipelines/agent/data/id_rsa)" .
+            - set -eu
+            - apk add --no-cache py-pip bash
+            - pip install --no-cache-dir docker-compose
+            - docker-compose -v
+            - apk add --no-cache nodejs
+            - npm run test:compose
 #            - apt-get update
 #            - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
 #            - unzip awscli-bundle.zip -d /tmp/
 #            - /tmp/awscli-bundle/install -b ~/bin/aws
 #            - export PATH=~/bin:$PATH
-#            - export IMAGE_NAME=$DOCKER_REGISTRY_DEV:$BITBUCKET_BUILD_NUMBER
 #            - docker build -t $IMAGE_NAME --build-arg SSH_PRIVATE_KEY="$(cat /opt/atlassian/pipelines/agent/data/id_rsa)"  .
 #            - eval $(aws ecr get-login --no-include-email --region ${AWS_DEFAULT_REGION})
 #            - docker push $IMAGE_NAME
+
