--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -14,6 +14,9 @@ services:
             - subsystems
         tty: true
         entrypoint: lerna run test:integration
+#            - npm run lint
+#            - lerna run test
+#            - lerna run test:integration
 
     sut-db:
         build:
