--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -5,11 +5,9 @@
   "main": "jestSetup.js",
   "dependencies": {
     "chai": "^4.1.2",
-    "chai-jest-diff": "^1.0.2"
+    "chai-jest-diff": "^1.0.2",
+    "chai-shallow-deep-equal": "^1.4.6"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "chai-shallow-deep-equal": "^1.4.6"
-  }
+  "license": "ISC"
 }
