--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -8,7 +8,7 @@
     "serve": "node .",
     "lint": "eslint -c ../../.eslintrc.yml .",
     "lint:fix": "prettier-eslint --write \"src/**/*.js\" && eslint src",
-    "test": "jest src/tests/__tests__/* --rootDir=. --config=../jest/jest.json -i",
+    "test": "env-cmd ./.env.test jest src/tests/__tests__/* --rootDir=. --config=../jest/jest.json -i",
     "test:integration": "env-cmd ./.env.test jest src/tests/__integration__/* --rootDir=. --config=../jest/jest.json -i"
   },
   "author": "",
