--- a/packages/request-handler/.env.test
+++ b/packages/request-handler/.env.test
@@ -1,5 +1,5 @@
-DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
-WALLETS_API_BASE_URL='http://localhost:3001/api/v1/'
+DATABASE_URL=postgres://postgres:secret@localhost:5434/stoxbcrm
+WALLETS_API_BASE_URL=http://localhost:3001/api/v1/
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 HANDLE_PENDING_REQUEST_CRON='*/10 * * * * *'
