--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name"	 : "request-manager",
   "scripts": {
-    "lint": "eslint . --ignore-path .gitignore --cache",
+    "lint": "eslint . --ignore-path .eslintignore --cache",
     "link": "common.sh link",
     "setup": "lerna clean --yes && lerna bootstrap --hoist",
     "containers": "docker-compose -f docker/docker-compose.yml up -d",
-    "test": "lerna run test",
-    "test:compose": "docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
-    "test:clean": "docker-compose -f docker/docker-compose.test.yml down"
+    "test": "cross-env IMAGE_NAME=request-manager docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
+    "test:clean": "cross-env IMAGE_NAME=request-manager docker-compose -f docker/docker-compose.test.yml down"
   }
 }
