--- a/packages/transactions-signer/package.json
+++ b/packages/transactions-signer/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
+    "env-cmd": "^7.0.0",
     "ethereumjs-tx": "^1.3.4",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
