--- a/packages/transactions-writer/package.json
+++ b/packages/transactions-writer/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
     "app-module-path": "^2.2.0",
+    "env-cmd": "^7.0.0",
     "promise-serial": "^0.1.5",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
