volume to docker compose

--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -12,7 +12,8 @@ services:
             - subsystems
         tty: true
         entrypoint: bash -c " npm run lint && lerna run test && lerna run test:integration"
-
+        volumes:
+          - ../packages:/services/packages
     sut-db:
         build:
             context: ../
